[gd_scene load_steps=12 format=3 uid="uid://cj6af7j7xfoju"]

[ext_resource type="Texture2D" uid="uid://dr1qp0wnp4qh0" path="res://Graphics/testtile.png" id="1_660sg"]
[ext_resource type="Script" path="res://Scenes/main_game.gd" id="1_kwlfb"]
[ext_resource type="Texture2D" uid="uid://dycxpgjwnarlg" path="res://Graphics/vines.png" id="2_e6qdi"]
[ext_resource type="PackedScene" uid="uid://cxq40x0r0ntw7" path="res://Scenes/Player.tscn" id="3_docxw"]
[ext_resource type="PackedScene" uid="uid://b8alqjyg7i60o" path="res://Scenes/ledge.tscn" id="5_gg8dk"]
[ext_resource type="PackedScene" uid="uid://bswl8qwj2wfar" path="res://Scenes/rope.tscn" id="6_xfi8u"]
[ext_resource type="PackedScene" uid="uid://8mhl3mn11if2" path="res://Scenes/croc.tscn" id="7_yjojl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0rfbg"]
texture = ExtResource("2_e6qdi")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1rtbq"]
texture = ExtResource("1_660sg")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_jyc5j"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 3
sources/1 = SubResource("TileSetAtlasSource_1rtbq")
sources/0 = SubResource("TileSetAtlasSource_0rfbg")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3s2kt"]
size = Vector2(1363, 44)

[node name="MainGame" type="Node2D"]
script = ExtResource("1_kwlfb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 712.0
color = Color(0.701961, 0.701961, 0.701961, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jyc5j")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 65540, 0, 0, 65539, 0, 0, 131075, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 196611, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 0, 0, 0, 2, 0, 0, 4, 0, 0, 262146, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0)

[node name="CatchArea" type="Node2D" parent="."]

[node name="Vines" type="Area2D" parent="CatchArea"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CatchArea/Vines"]
polygon = PackedVector2Array(0, 0, 64, 1, 64, 63, 129, 63, 129, 0, 191, 0, 191, 63, 255, 63, 256, -2, 321, 0, 321, 449, 256, 449, 256, 319, 127, 318, 128, 512, 62, 510, 62, 576, -2, 576)

[node name="Ledge" parent="CatchArea" instance=ExtResource("5_gg8dk")]
position = Vector2(1008, 352)

[node name="Ledge2" parent="CatchArea" instance=ExtResource("5_gg8dk")]
position = Vector2(816, 544)

[node name="Ledge3" parent="CatchArea" instance=ExtResource("5_gg8dk")]
position = Vector2(1040, 544)

[node name="Rope" parent="." instance=ExtResource("6_xfi8u")]
position = Vector2(672, 96)

[node name="Bro" parent="." instance=ExtResource("3_docxw")]
position = Vector2(525, 521)

[node name="DeathArea" type="Node2D" parent="."]

[node name="Death" type="Area2D" parent="DeathArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea/Death"]
position = Vector2(648.5, 696)
shape = SubResource("RectangleShape2D_3s2kt")

[node name="Enemies" type="Node2D" parent="."]

[node name="Croc" parent="Enemies" instance=ExtResource("7_yjojl")]
position = Vector2(1184, 658)

[node name="ColorRect2" type="ColorRect" parent="Enemies"]
offset_left = -60.0
offset_top = 673.0
offset_right = 1387.0
offset_bottom = 772.0
color = Color(0, 0.737255, 0.564706, 1)

[connection signal="body_entered" from="CatchArea/Vines" to="." method="_on_vines_body_entered"]
[connection signal="body_exited" from="CatchArea/Vines" to="." method="_on_vines_body_exited"]
[connection signal="body_entered" from="DeathArea/Death" to="." method="_on_death_body_entered"]
